@@ -27491,6 +27491,18 @@
         <code>LFPO</code>
         <coordinates>48-44N 002-24E</coordinates>
       </location>
+      <location>
+        <!-- Translators: This is in Paris in France. -->
+        <_name>Toussus-le-Noble</_name>
+        <code>LFPN</code>
+        <coordinates>48-46N 001-06E</coordinates>
+      </location>
+      <location>
+        <!-- Translators: This is in Paris in France. -->
+        <_name>Vélizy-Villacoublay</_name>
+        <code>LFPV</code>
+        <coordinates>48-46N 002-12E</coordinates>
+      </location>
     </city>
     <city>
       <!-- Translators: This is in France. -->
@@ -27661,67 +27673,102 @@
     </location>
     <location>
       <!-- Translators: This is in France.
-	The German name is "Straßburg".
+	local name (fr_FR): Strasbourg
+	local name (de_FR): Straßburg
 	-->
       <_name>Strasbourg</_name>
       <code>LFST</code>
       <coordinates>48-33N 007-38E</coordinates>
     </location>
-    <location>
-      <_name>Suippes Range Met</_name>
-      <code>LFFS</code>
-      <coordinates>49-09N 004-32E</coordinates>
-    </location>
-    <location>
-      <_name>Tarbes/Ossun</_name>
-      <code>LFBT</code>
-      <coordinates>43-11N 000-00</coordinates>
-    </location>
-    <location>
-      <_name>Toul/Rosieres</_name>
-      <code>LFSL</code>
-      <coordinates>48-47N 005-29E</coordinates>
-    </location>
-    <location>
-      <_name>Toulouse/Blagnac</_name>
-      <code>LFBO</code>
-      <coordinates>43-38N 001-22E</coordinates>
-    </location>
-    <location>
-      <_name>Toulouse/Francazal</_name>
-      <code>LFBF</code>
-      <coordinates>43-32N 001-22E</coordinates>
-    </location>
-    <location>
-      <_name>Tours/St-Symphorien</_name>
-      <code>LFOT</code>
-      <coordinates>47-27N 000-43E</coordinates>
-    </location>
-    <location>
-      <_name>Toussus Le Noble</_name>
-      <code>LFPN</code>
-      <coordinates>48-46N 001-06E</coordinates>
-    </location>
-    <location>
-      <_name>Troyes/Barberey</_name>
-      <code>LFQB</code>
-      <coordinates>48-20N 004-01E</coordinates>
-    </location>
-    <location>
-      <_name>Vichy/Charmeil</_name>
-      <code>LFLV</code>
-      <coordinates>46-10N 003-24E</coordinates>
-    </location>
-    <location>
-      <_name>Villacoublay</_name>
-      <code>LFPV</code>
-      <coordinates>48-46N 002-12E</coordinates>
-    </location>
-    <location>
-      <_name>Vittefleur/St. Vale</_name>
-      <code>LFOS</code>
-      <coordinates>49-50N 000-39E</coordinates>
-    </location>
+    <city>
+      <!-- Translators: This is in France. -->
+      <_name>Suippes</_name>
+      <location>
+        <!-- Translators: This is in Suippes in France. -->
+        <_name>Suippes Range Met</_name>
+        <code>LFFS</code>
+        <coordinates>49-09N 004-32E</coordinates>
+      </location>
+    </city>
+    <city>
+      <!-- Translators: This is in France. -->
+      <_name>Tarbes</_name>
+      <location>
+        <!-- Translators: This is in Tarbes in France. -->
+        <_name>Ossun</_name>
+        <code>LFBT</code>
+        <coordinates>43-11N 000-00</coordinates>
+      </location>
+    </city>
+    <city>
+      <!-- Translators: This is in France. -->
+      <_name>Toul</_name>
+      <location>
+        <!-- Translators: This is in Toul in France. -->
+        <_name>Rosières-en-Haye</_name>
+        <code>LFSL</code>
+        <coordinates>48-47N 005-29E</coordinates>
+      </location>
+    </city>
+    <city>
+      <!-- Translators: This is in France.
+	local name (fr_FR): Toulouse
+	local name (oc_FR): Tolosa
+	-->
+      <_name>Toulouse</_name>
+      <location>
+        <!-- Translators: This is in Toulouse in France. -->
+        <_name>Blagnac</_name>
+        <code>LFBO</code>
+        <coordinates>43-38N 001-22E</coordinates>
+      </location>
+      <location>
+        <!-- Translators: This is in Toulouse in France. -->
+        <_name>Francazal</_name>
+        <code>LFBF</code>
+        <coordinates>43-32N 001-22E</coordinates>
+      </location>
+    </city>
+    <city>
+      <!-- Translators: This is in France. -->
+      <_name>Tours</_name>
+      <location>
+        <!-- Translators: This is in Tours in France. -->
+        <_name>Saint-Symphorien</_name>
+        <code>LFOT</code>
+        <coordinates>47-27N 000-43E</coordinates>
+      </location>
+    </city>
+    <city>
+      <!-- Translators: This is in France. -->
+      <_name>Troyes</_name>
+      <location>
+      <!-- Translators: This is in Troyes in France. -->
+        <_name>Barberey-Saint-Sulpice</_name>
+        <code>LFQB</code>
+        <coordinates>48-20N 004-01E</coordinates>
+      </location>
+    </city>
+    <city>
+      <!-- Translators: This is in France. -->
+      <_name>Vichy</_name>
+      <location>
+        <!-- Translators: This is in Vichy in France. -->
+        <_name>Charmeil</_name>
+        <code>LFLV</code>
+        <coordinates>46-10N 003-24E</coordinates>
+      </location>
+    </city>
+    <city>
+      <!-- Translators: This is in France. -->
+      <_name>Saint-Valery-en-Caux</_name>
+      <location>
+        <!-- Translators: This is in Saint-Valery-en-Caux in France. -->
+        <_name>Vittefleur</_name>
+        <code>LFOS</code>
+        <coordinates>49-50N 000-39E</coordinates>
+      </location>
+    </city>
   </country>
   <country>
     <_name>Germany</_name>
