@@ -3,6 +3,11 @@
 	* Locations.xml.in: Added some more translator
 	comments, explaining what country the names come from.
 
+2005-04-07  Christian Rose  <menthos@menthos.com>
+
+	* Locations.xml.in: Added some more translator
+	comments, explaining what country the names come from.
+
 2005-04-06  Christian Rose  <menthos@menthos.com>
 
 	* Locations.xml.in: Added some more translator
